--- a/src/scss/config/_colors.scss
+++ b/src/scss/config/_colors.scss
@@ -1,5 +1,6 @@
-$prymary-background: #333333;
+$primary-background: #100E1D;
 $second-background: #1E213A;
+$card-background: #1E213A;
 
 $button-main: #6E707A;
 
