--- a/src/scss/components/_card-day.scss
+++ b/src/scss/components/_card-day.scss
@@ -9,7 +9,7 @@
 }
 
 .card-day {
-    background-color: $card-background;
+    background-color: $second-background;
     height: 177px;
     display: flex;
     flex-direction: column;
