--- a/src/scss/config/_colors.scss
+++ b/src/scss/config/_colors.scss
@@ -1,6 +1,5 @@
 $primary-background: #100E1D;
 $second-background: #1E213A;
-$card-background: #1E213A;
 
 $button-main: #6E707A;
 
@@ -8,3 +7,4 @@ $white-font: #E7E7EB;
 $light-font: #A09FB1;
 $dark-font: #110E3C;
 $light-dark-font: #88869D;
+$gray-font: #616475;
