--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,6 +4,24 @@
     box-sizing: border-box;
 }
 
+::-webkit-input-placeholder {
+    color: #616475;
+}
+
+:-moz-placeholder {
+    /* Firefox 18- */
+    color: #616475;
+}
+
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #616475;
+}
+
+:-ms-input-placeholder {
+    color: #616475;
+}
+
 body {
     margin: 0;
     font-family: $main-font;
