--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -34,6 +34,9 @@
         border: none;
         padding: 0;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        background-image: url('../assets/Location.svg');
+        background-repeat: no-repeat;
+        background-position: center;
 
         .logo {
             color: $white-font;
