--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -1,5 +1,4 @@
 .search {
-    margin-bottom: 2rem;
     width: 100%;
     height: 100vh;
     background-color: $second-background;
@@ -8,7 +7,14 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    overflow: hidden;
+    overflow: auto;
+    display: none;
+
+    &--show {
+        display: flex;
+        position: absolute;
+        z-index: 100;
+    }
 
     &__close {
         width: 100%;
