--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,6 +2,7 @@
 @import 'config/fonts';
 
 @import 'base/base';
+@import 'components/load';
 @import 'components/basic';
 @import 'components/details';
 @import 'components/card-day';
