--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -27,6 +27,27 @@ body {
     font-family: $main-font;
     color: $white-font;
     overflow: hidden;
+
+}
+
+.app {
+    @include laptop {
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.aside {
+    @include laptop {
+        min-width: 450px;
+        max-width: 30%;
+    }
+}
+
+.button {
+    outline: none;
+    cursor: pointer;
 }
 
 .links {
