--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -5,6 +5,12 @@
     flex-direction: column;
     align-items: center;
 
+    @include laptop {
+        padding-top: 42px;
+        height: auto;
+        min-height: 100%;
+    }
+
     &__button-container {
         width: 95%;
         margin-left: auto;
@@ -12,6 +18,12 @@
         height: 40px;
         display: flex;
         justify-content: space-between;
+
+        @include laptop {
+            padding: 0 46px;
+            margin: 0;
+            width: 100%;
+        }
     }
 
     &__search-place {
@@ -62,6 +74,17 @@
             background-position: center;
             background-size: cover;
             filter: opacity(10%);
+
+            @include laptop {
+                width: 450px;
+                height: 376px;
+            }
+        }
+
+        @include laptop {
+            margin-top: 20px;
+            margin-bottom: 33px;
+            height: 376px;
         }
     }
 
@@ -69,6 +92,10 @@
         display: flex;
         justify-content: center;
         width: 150px;
+
+        @include laptop {
+            width: 200px;
+        }
     }
 
     &__degrees {
@@ -95,6 +122,10 @@
         text-align: center;
         margin-top: 23px;
         margin-bottom: 48px;
+
+        @include laptop {
+            margin: 87px 0;
+        }
     }
 
     &__date {
@@ -113,6 +144,10 @@
         color: $light-dark-font;
         font-size: 18px;
         margin-bottom: 105px;
+
+        @include laptop {
+            margin-bottom: 52px;
+        }
     }
 
     &__location-city {
