--- a/src/scss/components/_highlights.scss
+++ b/src/scss/components/_highlights.scss
@@ -4,6 +4,18 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+
+    @include laptop {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-gap: 48px;
+
+        &__title {
+            margin-top: 72px;
+            margin-bottom: 0;
+            grid-column: 1 / 3;
+        }
+    }
 }
 
 .highlight-card {
@@ -50,6 +62,11 @@
         border-radius: 50%;
         background-color: rgba(255, 255, 255, 0.3);
         margin-right: 10px;
+    }
+
+    @include laptop {
+        width: 100%;
+        margin: 0;
     }
 
 }
