--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -1,6 +1,7 @@
 .search {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    height: max-content;
     background-color: $second-background;
     padding-top: 17px;
     display: flex;
@@ -9,6 +10,12 @@
     align-items: center;
     overflow: auto;
     display: none;
+    border-bottom: 1px solid #3C47E9;
+
+    @include laptop {
+        height: max-content;
+        width: 450px;
+    }
 
     &--show {
         display: flex;
