--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 @import 'config/colors';
 @import 'config/fonts';
+@import 'config/breakpoints.scss';
 
 @import 'base/base';
 @import 'components/load';
