--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -48,6 +48,7 @@ body {
 .button {
     outline: none;
     cursor: pointer;
+    transition: background-color ease-in;
 }
 
 .links {
@@ -65,5 +66,13 @@ body {
         text-decoration: none;
         margin-left: 5px;
         margin-right: 5px;
+        transition: color .2s ease;
+
+        @include laptop {
+            &:hover {
+                color: lighten(#616475, 30%);
+            }
+        }
     }
+
 }
