--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -35,7 +35,14 @@
         font-weight: 500;
         font-size: 16px;
         line-height: 19px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+        @include laptop {
+            &:hover {
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                background-color: lighten($button-main, 20%);
+            }
+        }
+
     }
 
     &__get-location {
@@ -45,7 +52,6 @@
         background-color: $button-main;
         border: none;
         padding: 0;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         background-image: url('../assets/Location.svg');
         background-repeat: no-repeat;
         background-position: center;
@@ -54,6 +60,14 @@
             color: $white-font;
             font-size: 22px;
         }
+
+        @include laptop {
+            &:hover {
+                background-color: lighten($button-main, 20%);
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            }
+        }
+
     }
 
     &__image-container {
