--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -9,8 +9,12 @@
     justify-content: flex-start;
     align-items: center;
     overflow: auto;
-    display: none;
     border-bottom: 1px solid #3C47E9;
+    display: flex;
+    position: absolute;
+    z-index: 100;
+    left: -100%;
+    transition: left .3s ease-in-out;
 
     @include laptop {
         height: max-content;
@@ -19,17 +23,17 @@
 
     &--show {
         display: flex;
-        position: absolute;
-        z-index: 100;
+        left: 0;
     }
 
     &__close {
-        width: 100%;
+        width: auto;
         display: block;
         text-align: right;
         padding-right: 17px;
         font-size: 15px;
         padding-bottom: 30px;
+        align-self: flex-end;
     }
 
     &__form {
@@ -53,13 +57,10 @@
         padding: 17px;
         outline: none;
         padding-left: 50px;
-
-        &:placeholder-shown {
-            background-image: url('../assets/search-solid.svg');
-            background-repeat: no-repeat;
-            background-position: 15px center;
-            background-size: 17px;
-        }
+        background-image: url('../assets/search-solid.svg');
+        background-repeat: no-repeat;
+        background-position: 15px center;
+        background-size: 17px;
     }
 
     &__button {
@@ -72,6 +73,13 @@
         font-size: 16px;
         line-height: 18, 78px;
         color: $white-font;
+
+        @include laptop {
+            &:hover {
+                background-color: transparent;
+                border: 2px solid #3C47E9;
+            }
+        }
     }
 
     &__results {
@@ -93,6 +101,8 @@
         color: $white-font;
         margin: 5px 0;
         border: 1px solid transparent;
+        transition: border .3s ease-out;
+        cursor: pointer;
 
         &:hover {
             border: 1px solid $gray-font;
