--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -27,11 +27,11 @@ body {
     font-family: $main-font;
     color: $white-font;
     overflow: hidden;
-
+    background-color: $primary-background;
 }
 
 .app {
-    @include laptop {
+    @include tablet {
         display: flex;
         width: 100%;
         height: 100%;
@@ -39,6 +39,11 @@ body {
 }
 
 .aside {
+    @include tablet {
+        min-width: 325px;
+        max-width: 25%;
+    }
+
     @include laptop {
         min-width: 450px;
         max-width: 30%;
@@ -48,7 +53,7 @@ body {
 .button {
     outline: none;
     cursor: pointer;
-    transition: background-color ease-in;
+    transition: background-color .2s ease-in;
 }
 
 .links {
@@ -68,11 +73,10 @@ body {
         margin-right: 5px;
         transition: color .2s ease;
 
-        @include laptop {
+        @include tablet {
             &:hover {
                 color: lighten(#616475, 30%);
             }
         }
     }
-
 }
