--- a/src/scss/components/_basic.scss
+++ b/src/scss/components/_basic.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
 
-    @include laptop {
+    @include tablet {
         padding-top: 42px;
         height: auto;
         min-height: 100%;
@@ -19,7 +19,7 @@
         display: flex;
         justify-content: space-between;
 
-        @include laptop {
+        @include tablet {
             padding: 0 46px;
             margin: 0;
             width: 100%;
@@ -36,7 +36,7 @@
         font-size: 16px;
         line-height: 19px;
 
-        @include laptop {
+        @include tablet {
             &:hover {
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 background-color: lighten($button-main, 20%);
@@ -61,13 +61,12 @@
             font-size: 22px;
         }
 
-        @include laptop {
+        @include tablet {
             &:hover {
                 background-color: lighten($button-main, 20%);
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             }
         }
-
     }
 
     &__image-container {
@@ -89,13 +88,18 @@
             background-size: cover;
             filter: opacity(10%);
 
+            @include tablet {
+                width: 325px;
+                height: 326px;
+            }
+
             @include laptop {
-                width: 450px;
                 height: 376px;
+                width: 450px;
             }
         }
 
-        @include laptop {
+        @include tablet {
             margin-top: 20px;
             margin-bottom: 33px;
             height: 376px;
@@ -107,7 +111,7 @@
         justify-content: center;
         width: 150px;
 
-        @include laptop {
+        @include tablet {
             width: 200px;
         }
     }
@@ -137,7 +141,7 @@
         margin-top: 23px;
         margin-bottom: 48px;
 
-        @include laptop {
+        @include tablet {
             margin: 87px 0;
         }
     }
@@ -159,7 +163,7 @@
         font-size: 18px;
         margin-bottom: 105px;
 
-        @include laptop {
+        @include tablet {
             margin-bottom: 52px;
         }
     }
