--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -26,7 +26,7 @@ body {
     margin: 0;
     font-family: $main-font;
     color: $white-font;
-    overflow: hidden;
+    overflow: auto;
     background-color: $primary-background;
 }
 
@@ -36,6 +36,16 @@ body {
         width: 100%;
         height: 100%;
     }
+}
+
+.exceeded {
+    width: 100vw;
+    height: 100vh;
+    padding: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .aside {
